# vb3yeet-aprs

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  log.cbr  messanger.py  requirements.txt  test_app.sh  yeetlog.adi
assets/: service_flow.drawio
containers/router/: router_setup.sh
containers/web_proxy/: .gitignore  Caddyfile
src/: aprs.rs  config.rs  main.rs  router.rs
src/services/: aprs_listener.rs  log_sync.rs  message_handler.rs  mod.rs
