[package]
name = "vb3yeet-aprs"
publish = false
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "^1.18.2", features = ["macros", "rt-multi-thread", "sync"] }
regex = "1.5.5"