[package]
name = "vb3yeet-aprs"
publish = false
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "^1.18.2", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "net"
] }
regex = "1"
serde = { version = "^1.0.126", features = ["derive"] }
toml = "^0.5.9"
log = "0.4.17"
fern = "0.6.1"
chrono = "0.4.19"
rocket = "0.5.0-rc.2"