[package]
name = "vb3yeet-aprs"
publish = false
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread", "net", "sync"] }
regex = "1"
fern = "0.6.1"
chrono = "0.4.19"
log = "0.4.17"
adif = "0.1.1"
reqwest = "0.11.10"
indexmap = "1.6.2"